feat: Add MenuVerse order status sync test suite and documentation
- Add test-menuverse-order-sync.js with comprehensive test scenarios
  * Place order with MenuVerse vendor ID
  * Sync single order from MenuVerse
  * Webhook simulation for status updates
  * Bulk sync all user orders
  * Query order to verify status changes

- Add MENUVERSE-SYNC-README.md with complete documentation
  * Quick start guide with GraphQL examples
  * Status mapping table
  * Testing instructions
  * Troubleshooting guide

- Update ENVIRONMENT-VARIABLES.md
  * Add secondary Firebase configuration section
  * Document MenuVerse integration setup

- Update package.json
  * Add test:sync script for easy testing

Note: All GraphQL resolvers for sync functionality are already
implemented in schema.js from previous commits

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "node test-ci.js",
-    "test:ci": "npm start & sleep 10 && npm test && pkill -f 'node index.js'"
+    "test:ci": "npm start & sleep 10 && npm test && pkill -f 'node index.js'",
+    "test:sync": "node test-menuverse-order-sync.js"
   },
   "keywords": [
     "graphql",
