--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.29",
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.13.2",
@@ -31,5 +32,8 @@
     "graphql-upload": "^15.0.2",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.56.1"
   }
 }
