feat: Enable Vercel deployment for the API by configuring a serverless entry point, implementing in-memory SQLite, and adding comprehensive deployment documentation.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "node test-ci.js",
-    "test:ci": "npm start & sleep 10 && npm test && pkill -f 'node index.js'"
+    "test:ci": "npm start & sleep 10 && npm test && pkill -f 'node index.js'",
+    "build": "echo 'Build complete - serverless function ready'",
+    "vercel-build": "echo 'Vercel build complete'"
   },
   "keywords": [
     "graphql",
