Migrate to Firestore and prepare for Vercel deployment
- Migrated from SQLite to Firebase Firestore for persistent data storage
- Created database.firestore.js with full Firestore implementation
- Updated schema.js to use Firestore database
- Created Vercel serverless function entry point (api/index.js)
- Removed SQLite dependencies (better-sqlite3)
- Deleted deprecated files (database.js, database.vercel.js)
- Updated all documentation (README, deployment guides)
- Added comprehensive migration and deployment documentation
- Production ready for Vercel deployment with persistent data

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ node_modules/
 *.db
 *.db-journal
 .vercel
+
+# Old SQLite files (migrated to Firestore)
+database.js
+database.vercel.js
+food-delivery.db
