--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^13.5.0",
     "form-data": "^4.0.4",
