--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-tools/schema": "^10.0.29",
+    "@supabase/supabase-js": "^2.89.0",
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
-    "dotenv": "^17.2.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "firebase-admin": "^13.5.0",
     "form-data": "^4.0.4",
