--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "node test-ci.js",
+    "test:unit": "jest",
+    "test:property": "jest --testPathPatterns=property.test.js",
     "test:ci": "npm start & sleep 10 && npm test && pkill -f 'node index.js'",
     "build": "echo 'Build complete - serverless function ready'",
     "vercel-build": "echo 'Vercel build complete'"
@@ -38,6 +40,8 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.56.1"
+    "@playwright/test": "^1.56.1",
+    "fast-check": "^4.5.3",
+    "jest": "^30.2.0"
   }
 }
